# Cookiemonster

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cleaner.cpp  Cleaner.h  LICENSE  README.md  RELEASE_NOTES.md  checksums.md  create_structure.bat  installer.nsi  main.cpp
docs/: CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md
installer/: build_installer.bat
src/: CMakeLists.txt
src/include/: Cleaner.h
src/source/: Cleaner.cpp  main.cpp
tests/: CMakeLists.txt  CleanerTest.cpp  auto_commit.ps1  run_tests.ps1
tests/src/: CleanerTests.cpp
tests/unit/: CMakeLists.txt
